k8s/hello-world-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world-app
  replicas: 1
  template:
    metadata:
      name: hello-world-pod
      labels:
        app: hello-world-app
    spec:
      containers:
        - name: hello-world-py
          image: fabughazaleh/hello-world-py:latest
          # image: gcr.io/omega-dahlia-260119/hello-world-py
          imagePullPolicy: "Always"
          resources: {}
          ports:
          - containerPort: 5000
            name: http
      securityContext: {}
