k8s/hello-world-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: hello-world-svc
  name: hello-world-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: hello-world-app
