k8s/hello-world-ingress.yaml
# apiVersion: ingress.networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: hello-world-svc
    servicePort: 80
  rules:
  - host: hello.world.py
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-svc
          servicePort: 80
